Bug 382861 - Current file row prints html tags instead of rendering them
Summary: Current file row prints html tags instead of rendering them
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: UI: general (other bugs)
Version First Reported In: 5.1.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-07-28 14:41 UTC by Diego Gangl
Modified: 2017-07-31 07:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.0
Sentry Crash Report:


Attachments
The bug in effect (13.05 KB, image/png)
2017-07-28 14:41 UTC, Diego Gangl
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Diego Gangl 2017-07-28 14:41:29 UTC
Created attachment 106924 [details]
The bug in effect

When tabs are disabled and the row that displays the current file is too small, the html fails to render and shows the tags instead (see the "use ctrl+tab" text).
Comment 1 Sven Brauch 2017-07-28 14:42:01 UTC
Yes, sucks and needs fixing.
Comment 2 Sven Brauch 2017-07-28 15:36:46 UTC
Git commit e1d2989eef907406520ed2d9b3bb9758c26451d1 by Sven Brauch.
Committed on 28/07/2017 at 15:36.
Pushed by brauch into branch 'master'.

Fix elision of document title with tabbar disabled

Do not backport, it contains a string change.

The vertical alignment of the label is off by 1-2 pixels on my system,
no idea why.

M  +14   -1    sublime/container.cpp

https://commits.kde.org/kdevplatform/e1d2989eef907406520ed2d9b3bb9758c26451d1