Fix elision of document title with tabbar disabled

Do not backport, it contains a string change.

The vertical alignment of the label is off by 1-2 pixels on my system,
no idea why.

BUG:382861